# content-manager

./: .gitignore  DEPLOY.md  README.md
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/app/: audio.py  auth.py  config.py  db.py  main.py  models.py  rate_limit.py  schemas.py  spotify.py  transcribe.py
api/app/routers/: auth.py  items.py  posts.py  spotify.py
deploy/: Caddyfile  docker-compose.yml  nginx.example.conf
deploy/api/: .env.example
deploy/web/: .env.example
web/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/items/[id]/: route.ts
web/app/api/items/[id]/audio/: route.ts
web/app/api/items/[id]/transcribe/: route.ts
web/app/api/items/voice/: route.ts
web/app/api/spotify/connect/: route.ts
web/app/api/spotify/control/[action]/: route.ts
web/app/api/spotify/disconnect/: route.ts
web/app/api/spotify/state/: route.ts
web/app/api/spotify/status/: route.ts
web/app/devices/: page.tsx
web/app/items/[id]/: page.tsx
web/app/items/new/: page.tsx
web/app/login/: page.tsx
web/app/logout/: route.ts
web/app/new/: page.tsx
web/app/posts/[id]/: page.tsx
web/app/setup/: page.tsx
web/components/: AutoRefresh.tsx  ItemCard.tsx  ItemForm.tsx  PostForm.tsx  SpotifyWidget.tsx  VoiceMemoForm.tsx
web/lib/: api.ts  form.ts  proxy.ts  session.ts
web/public/: manifest.json
