[project]
name = "content-manager-api"
version = "0.1.0"
description = "FastAPI backend for content-manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
