[project]
name = "content-manager-api"
version = "0.1.0"
description = "FastAPI backend for content-manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
